--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div class="logo-container">
       <a href="#" target="_blank">
-       <img src="restart.png" alt="Logo" style="height: 50px;">
+       <img src="images/restart.png" alt="Logo" style="height: 50px;">
      </a></div>
 </nav>
   
