--- a/access.html
+++ b/access.html
@@ -102,7 +102,7 @@
       <textarea id="comment" name="comment" placeholder="Your Message" required></textarea>
 
       <!-- Hidden input field for Formsubmit -->
-      <input type="hidden" name="_next" value="http://127.0.0.1:5500/" />
+      <input type="hidden" name="_next" value="https://vivekabhimanyu.github.io/restart/access.html/" />
       <input type="hidden" name="_subject" value="New Contact Form Submission" />
 
       <button type="submit" class="form-btn">Submit</button>
