--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
       <div class="image-section">
         <img src="images/tea.png" alt="Tea Glass" class="tea-image">
       </div>
-      <button class="donate-button" onclick="showQRCode()">Donate for Tea</button>
+      <button class="donate-button" onclick="showQRCode()"> Buy Me T </button>
     </div>
 
     <!-- Right Side: Content Partners List -->
