--- a/index.html
+++ b/index.html
@@ -439,11 +439,9 @@
 
     <!-- Right Side: Content Partners List -->
     <div class="right-side">
-      <h2>Content Partners</h2>
+      <h2>Content Rights</h2>
       <ul class="partners-list">
-        <li><a href="https://aws.amazon.com/training/restart/"><button>Amazon Web Services</button></a></li>
-        <li><a href="https://india.generation.org/programs/aws-restart/"><button>Generation India</button></a></li>
-        <li><a href="https://www.vinsys.com/blog/aws-re-start-transforming-professionals-career-in-it-industry"><button>Vinsys</button></a></li>
+        <p>All the contents provided in this website are owned by AMAZON RESTART Program.We don't own any content copyrights.Please reachout to us for Content removals.This is fair use of educational content only.</p>
       </ul>
     </div>
   </div>
@@ -451,7 +449,6 @@
   <!-- Footer Bottom Section -->
   <div class="footer-bottom">
     <p>&copy; 2024 AWS re/Start. All rights reserved.</p>
-    <p>Contact us: info@awsrestart.com</p>
   </div>
 
   <!-- Popup -->
